refactor: gitUrls 여러개 받는 기능으로 수정